# connectomics

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
common/: array.py  array_mixins.py  array_pytype_test.py  array_test.py  bounding_box.py  bounding_box_test.py  box_generator.py  box_generator_test.py  utils.py  utils_test.py
connectomics/brainstate/: sampling.py  sampling_test.py
connectomics/common/: array.py  array_mixins.py  array_pytype_test.py  array_test.py  async_lib.py  beam_utils.py  beam_utils_test.py  binaries.py  bounding_box.py  bounding_box_test.py  box_generator.py  box_generator_test.py  counters.py  counters_test.py  file.py  file_test.py  geom_utils.py  geom_utils_test.py  gin_utils.py  gin_utils_test.py  graph_utils.py  import_util.py  io_utils.py  io_utils_test.py  jax_utils.py  jax_utils_test.py  metadata_utils.py  object_utils.py  opencv_utils.py  opencv_utils_test.py  sharding.py  ts_utils.py  tuples.py  tuples_test.py  union_find.py  union_find_test.py  utils.py  utils_test.py
connectomics/jax/: checkpoint.py  config_util.py  config_util_test.py  grain_util.py  grain_util_test.py  metrics.py  metrics_test.py  parameter_replacement_util.py  parameter_replacement_util_test.py  spatial.py  spatial_test.py  training.py  util.py  util_test.py
connectomics/metrics/: ellipticity.py  ellipticity_test.py
connectomics/mogen/: reorder.py  reorder_test.py  utils.py
connectomics/pipeline/: launch_local_dask_cluster.py  materialize_tensor.py  process_volume_dask.py
connectomics/segclr/: README.md  (+7 more)
segmentation/: labels_test.py
(+93 files in other folders)
