[metadata]
name = connectomics
author = Google Connectomics Team
author_email = noreply@google.com
description = Common repository for connectomics-related libraries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/google-research/connectomics

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.6
install_requires =
    absl-py
    edt
    numpy
    scikit-image
    scipy

[options.packages.find]
where = .

[options.extras_require]
segclr =
    tensorflow
    edward2
    scikit-learn
