[metadata]
name = connectomics
author = Google Connectomics Team
author_email = noreply@google.com
description = Common repository for connectomics-related libraries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/google-research/connectomics

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.6
install_requires =
    absl-py
    dataclasses-json>=0.5.6
    edt
    numpy
    scikit-image
    scipy

[options.packages.find]
where = .

[options.extras_require]
decorators =
    gin-config
    jax
    tensorstore
materialize_tensor =
    apache-beam
    connectomics[decorators]
    sofima @ git+https://github.com/google-research/sofima@main
segclr =
    tensorflow
    edward2
    scikit-learn
